created image hovering of displayed image that shows other image

--- a/styles/utilities.css
+++ b/styles/utilities.css
@@ -4,6 +4,11 @@ body {
     background-color: lightpink;
 }
 
+.header{
+    background-color:cyan ;
+    border-radius: 5px;
+}
+
 .header > h1{
     display: flex;
     justify-content: center;
