--- a/styles/place.css
+++ b/styles/place.css
@@ -1,19 +1,30 @@
-
-
-.header{
-    background-color:cyan ;
-    border-radius: 5px;
-}
-
-
-
 p{
     font-family: 'Garamond', 'Arial Narrow', Arial, sans-serif;
     font-weight: bold;
     text-align: justify;
+    font-size: larger;
+    color:aliceblue;
+    color:ghostwhite;
 
     width: 900px;
     margin-left:auto;
     margin-right:auto;
-    margin-bottom:30px
+    margin-bottom:25px
+}
+
+.image{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width:50%;
+    height:300px;
+    background-image: url("./../pictures/lucerne.jpeg");
+    background-size: cover;
+    background-position: center;
+    transition: background-image 0.3s ease;
+    border-radius: 20px;
+}
+
+.image:hover{
+    background-image: url("./../pictures/greenary.jpg");
 }
